Closed Bug 1433211 Opened 6 years ago Closed 6 years ago

Fix comm-central idl definitions to work with rust binding generation.

Categories

(MailNews Core :: Backend, defect)

defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 60.0

People

(Reporter: tomprince, Assigned: tomprince)

References

Details

Attachments

(5 files)

Bug 1293362 introduced automatic generation of rustbindings for xpcom interfaces. comm-central's idl files cause the generated rust to fail to build.
Attachment #8945555 - Attachment is obsolete: true
Comment on attachment 8945559 [details]
Bug 1433211: Don't redefine `imapMessageFlagsType` in idl.

Would this work as "interface nsIImapUrl;" instead of #include?
(In reply to :aceman from comment #3) 
> Comment on attachment 8945559 [details]
> Bug 1433211: Don't redefine `imapMessageFlagsType` in idl.
> 
> Would this work as "interface nsIImapUrl;" instead of #include?

No. The include is to get the typedef for `imapMessageFlagsType` not `nsIImapUrl`. The problem with just having the typdef there is that rust generates the typedef twice, which cause the build to fail.
Assignee: nobody → mozilla
Severity: normal → critical
Status: NEW → ASSIGNED
Component: General → Backend
OS: Unspecified → All
Product: Thunderbird → MailNews Core
Hardware: Unspecified → All
Attachment #8945556 - Flags: review?(florian)
Comment on attachment 8945555 [details]
Bug 1433211: Remove unused `purpleIProxyInfo`.

Florian Quèze [:florian] has approved the revision.

https://phabricator.services.mozilla.com/D437#10415
Attachment #8945555 - Flags: review+
Attachment #8945556 - Flags: review+
Attachment #8945555 - Attachment is obsolete: false
I'll build with this locally and review the other patches, as they are mostly syntactic only.
Attachment #8945558 - Flags: review+
Attachment #8945559 - Flags: review+
Comment on attachment 8945560 [details]
Bug 1433211: Remove unused `nsMsgSearchType`.

Seems to compile and work without it ;-)
Plus, it was an awful hack, have the attribute readonly and declare a setter anyway.

Great job getting all this sorted out, please land asap.
Attachment #8945560 - Flags: review+
(In reply to :aceman from comment #6)
> I'll build with this locally and review the other patches, as they are
> mostly syntactic only.
Maybe my r+ is sufficient since we don't want to wait three hours for Aceman's build to finish :-(
Pushed by mozilla@hocat.ca:
https://hg.mozilla.org/comm-central/rev/fade6344322e
Remove unused `purpleIProxyInfo`; r=florian
https://hg.mozilla.org/comm-central/rev/e34f8c36ca9e
Remove unused `nsMsgSearchType`; r=jorgk
https://hg.mozilla.org/comm-central/rev/00b0d2631cc2
Use `native` in idl for concrete types that are references but not defined in idl; r=jorgk
https://hg.mozilla.org/comm-central/rev/2b56d89a8792
Don't redefine `imapMessageFlagsType` in idl; r=jorgk
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Comment on attachment 8945560 [details]
Bug 1433211: Remove unused `nsMsgSearchType`.

Jorg K (GMT+1) has been removed from the revision.

https://phabricator.services.mozilla.com/D438
Attachment #8945560 - Flags: review+
Comment on attachment 8945558 [details]
Bug 1433211: Use `native` in idl for concrete types that are references but not defined in idl.

Jorg K (GMT+1) has been removed from the revision.

https://phabricator.services.mozilla.com/D439
Attachment #8945558 - Flags: review+
Comment on attachment 8945559 [details]
Bug 1433211: Don't redefine `imapMessageFlagsType` in idl.

Jorg K (GMT+1) has been removed from the revision.

https://phabricator.services.mozilla.com/D440
Attachment #8945559 - Flags: review+
Target Milestone: --- → Thunderbird 60.0
Comment on attachment 8945558 [details]
Bug 1433211: Use `native` in idl for concrete types that are references but not defined in idl.

It was good last time I approved it ;-)
Attachment #8945558 - Flags: review+
Attachment #8945559 - Flags: review+
Attachment #8945560 - Flags: review+
Attachment #8945556 - Flags: review?(florian)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: