Bug 1433211: Remove unused `nsMsgSearchType`; r=jorgk

MozReview-Commit-ID: 6i1PFFWewwR

Differential Revision: https://phabricator.services.mozilla.com/D438

--HG--
extra : rebase_source : 67115f890a793431fe7378d2ff90918302acff43